# Watch-Claw

./: .bazelignore  .bazelrc  .gitignore  .swiftformat  AGENTS.md  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  bazel-run.sh  build_defs.bzl  deploy.sh
WatchClaw/: AppReducer.swift  Info.plist  WatchClawApp.swift
WatchClaw/Foundation/: LoggingOSLog.swift
WatchClawPhone/: Info.plist  WatchClawPhoneApp.swift
bazel-patches/swift-composable-architecture/: BUILD.bazel  fix-binding-observation.patch  fix-navigation-observation.patch  fix-store-observation.patch
bazel-patches/swift-perception/: BUILD.bazel  fix-bindable-availability.patch
